endpoint de put
