# app/Http/Controllers/CustomerController.php
@@ -76,7 +76,7 @@ class CustomerController extends Controller
      *      required=true,
      *      description="Objeto de cliente a crear",
      *      @OA\MediaType(
-     *          mediaType="multipart/form-data",
+     *          mediaType="application/x-www-form-urlencoded",
      *          @OA\Schema(ref="#/components/schemas/Customer")
      *      )
      *  ),
@@ -121,7 +121,7 @@ class CustomerController extends Controller
     {
         $user = Auth::user();
 
-        if($user->cannot('create', Customer::class())) {
+        if($user->cannot('create', Customer::class)) {
             return $this->sendError('No estás autorizado para realizar esta acción', 403);
         }
 
@@ -157,9 +157,16 @@ class CustomerController extends Controller
      *  @OA\Parameter(ref="#/components/parameters/acceptJsonHeader"),
      *  @OA\Parameter(ref="#/components/parameters/requestedWith"),
      *  @OA\Response(
-     *         response=200,
-     *         description="Operación exitosa",
-     *         @OA\JsonContent(ref="#/components/schemas/Customer")
+     *      response=200,
+     *      description="Operación exitosa",
+     *      @OA\JsonContent(
+     *         type="object",
+     *         @OA\Property(property="message", type="string", description="Mensaje de respuesta"),
+     *         @OA\Property(
+     *           property="data",
+     *           ref="#/components/schemas/Customer"
+     *         )
+     *      ),
      *  ),
      *  @OA\Response(
      *      response=404,
@@ -203,11 +210,93 @@ class CustomerController extends Controller
     }
 
     /**
-     * Update the specified resource in storage.
+     * @OA\Put(
+     *  path="/api/customers/{id}",
+     *  tags={"customer"},
+     *  summary="Obtener un cliente concreto",
+     *  description="Obtener un objeto de un cliente que corresponda con un identificador dado",
+     *  operationId="updateCustomer",
+     *  @OA\Parameter(ref="#/components/parameters/CustomerIdParameter"),
+     *  @OA\Parameter(ref="#/components/parameters/acceptJsonHeader"),
+     *  @OA\Parameter(ref="#/components/parameters/requestedWith"),
+     *  @OA\RequestBody(
+     *      required=true,
+     *      description="Datos del cliente a actualizar",
+     *      @OA\MediaType(
+     *          mediaType="application/x-www-form-urlencoded",
+     *          @OA\Schema(ref="#/components/schemas/Customer")
+     *      )
+     *  ),
+     *  @OA\Response(
+     *     response=200,
+     *     description="Operación exitosa",
+     *     @OA\JsonContent(
+     *         type="object",
+     *         @OA\Property(property="message", type="string", description="Mensaje de respuesta"),
+     *         @OA\Property(
+     *              property="data",
+     *              ref="#/components/schemas/Customer"
+     *         )
+     *     ),
+     *  ),
+     * @OA\Response(
+     *      response=400,
+     *      description="Error de validación",
+     *      ref="#/components/responses/ValidationErrorResponse"
+     *  ),
+     *  @OA\Response(
+     *      response=404,
+     *      description="No existe ese cliente",
+     *      ref="#/components/responses/NotFoundResponse"
+     *  ),
+     *  @OA\Response(
+     *      response=403,
+     *      description="No autorizado",
+     *      ref="#/components/responses/NotAuthorizedResponse"
+     *  ),
+     *  @OA\Response(
+     *      response=401,
+     *      description="No autenticado",
+     *      ref="#/components/responses/UnauthenticatedResponse"
+     *  ),
+     *  @OA\Response(
+     *      response=500,
+     *      description="Error de servidor",
+     *  ),
+     *  security={
+     *       {"BearerAuth": {}}
+     *  }
+     * )
      */
     public function update(Request $request, string $id)
     {
-        //
+        $user = Auth::user();
+
+        $customer = Customer::find($id);
+        if(! $customer) {
+            return $this->sendError('No existe este cliente', 404);
+        }
+
+        if($user->cannot('update', $customer)) {
+            return $this->sendError('No estás autorizado para realizar esta acción', 403);
+        }
+
+        info($request->all());
+
+        $validateCustomer = Validator::make($request->all(), $this->customerValidationRules);
+        if($validateCustomer->fails()){
+            return $this->sendValidationError(
+                'Ha ocurrido un error de validación',
+                $validateCustomer->errors()
+            );
+        }
+
+        $customer->name = $request->name;
+        $customer->email = $request->email;
+        $customer->telephone = $request->telephone;
+        $customer->save();
+
+        return $this->sendSuccess('Cliente actualizado', $customer);
     }
 
     /**
